Fixed input bar width to work on mobile, and GET now works when button is pressed.

--- a/www/Style/screen.css
+++ b/www/Style/screen.css
@@ -109,7 +109,7 @@ margin-bottom: .5em;
 
 input {
 	padding: 5px;
-	width:65%;
+	width:50%;
 	margin-left: 10px;
 	float: right;
 }
